fix page overflow

--- a/assets/main_style.css
+++ b/assets/main_style.css
@@ -1,3 +1,9 @@
+body, html{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
 #countdown_container {
     display: flex;
     justify-content: center;
